#337 model DSL: opposite relationships, omit default ranges, skip Liquibase changelog